fix number button vertical alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,8 +18,8 @@ li {list-style-type: none;}
   height: 35px;
   padding: 15px;
   text-align: center;
-  vertical-align: middle;
   margin: 5px 20px;
+  line-height: 35px
 }
 
 #neg {
@@ -35,6 +35,7 @@ li {list-style-type: none;}
   text-align: center;
   vertical-align: middle;
   margin: 5px 20px;
+  line-height: 35px
 }
 
 #push {
